--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ bcrypt==3.2.0
 blinker==1.4
 Brlapi==0.8.3
 certifi==2020.6.20
+cffi==1.15.1
 chardet==4.0.0
 click==8.0.3
 colorama==0.4.4
@@ -46,6 +47,7 @@ Pillow==9.0.1
 protobuf==3.12.4
 ptyprocess==0.7.0
 pycairo==1.20.1
+pycparser==2.21
 pycups==2.0.1
 PyGObject==3.42.1
 PyJWT==2.3.0
@@ -53,7 +55,6 @@ pymacaroons==0.13.0
 PyNaCl==1.5.0
 pyparsing==2.4.7
 pyRFC3339==1.1
-python==3.8.10
 python-apt==2.3.0+ubuntu2.1
 python-dateutil==2.8.1
 python-debian===0.1.43ubuntu1
