--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ duplicity==0.8.21
 Faker==15.3.3
 fasteners==0.14.1
 future==0.18.2
+gunicorn==20.1.0
 httplib2==0.20.2
 idna==3.3
 importlib-metadata==4.6.4
