--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,4 @@
-apturl==0.5.2ubuntu22
+apturl==0.5.2 https://launchpad.net/ubuntu/lunar/+package/apturl
 asgiref==3.5.0
 bcrypt==3.2.0
 blinker==1.4
